added the styling to my calculator app

--- a/index.html
+++ b/index.html
@@ -21,17 +21,29 @@
                 </button>
             </div>
             <div class = "btns">
-                <div class = "row1">
-
+                <div class = "row">
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button>÷</button>
                 </div>
-                <div class = "row2">
-
+                <div class = "row">
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button>x</button>
                 </div>
-                <div class = "row3">
-
+                <div class = "row">
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button>-</button>
                 </div>
-                <div class = "row4">
-
+                <div class = "row">
+                    <button>.</button>
+                    <button>0</button>
+                    <button>=</button>
+                    <button>+</button>
                 </div>
             </div>
         </div>
