--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel = "stylesheet" href = "./styles.css"/>
 </head>
@@ -10,7 +13,7 @@
     <div class = "app">
         <div class = "calculator">
             <div class = "result">
-
+                <h1 class = "result-text">0</h1>
             </div>
             <div class = "button">
                 <button class="clear">
@@ -22,31 +25,32 @@
             </div>
             <div class = "btns">
                 <div class = "row">
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
+                    <button class="num">7</button>
+                    <button class="num">8</button>
+                    <button class="num">9</button>
                     <button>÷</button>
                 </div>
                 <div class = "row">
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>x</button>
+                    <button class="num">4</button>
+                    <button class="num">5</button>
+                    <button class="num">6</button>
+                    <button class="num">x</button>
                 </div>
                 <div class = "row">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
+                    <button class="num">1</button>
+                    <button class="num">2</button>
+                    <button class="num">3</button>
                     <button>-</button>
                 </div>
                 <div class = "row">
                     <button>.</button>
-                    <button>0</button>
+                    <button class="num">0</button>
                     <button>=</button>
                     <button>+</button>
                 </div>
             </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
